_sass/style.scss
$accent-color: #c23616;

* {
    margin: 0;
    padding: 0;

    font-size: 20px;
}

body {
    display: flex;
    width: 100vw;
    max-height: 100vh;
    overflow: hidden;

    flex-direction: column;

    font-family: 'Schoolbell', cursive;
}

header, footer {
    height: 10vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

header {
    position: relative;
    display: flex;
    flex-direction: column;
    color: $accent-color;
    padding: 16px 0;
    margin-bottom: 20px; /* Adjust if needed to provide spacing for the squiggly line */
}

header a {
    font-size: 32px !important;
}

header a .tag {
    color: black;
}

.header-squiggly-line {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 20px; /* Adjust height as needed */
    overflow: hidden;
}

.header-squiggly-line svg {
    display: block;
    width: 100%;
    height: 100%;
}


.main {
    height: 100%;

    display: flex;
    flex-direction: row;
    flex: 1;

    .sidebar {
        width: 35%;
        border-right: 2px solid #c2351645;

        display: flex;
        flex-direction: column;

        justify-content: center;
        align-items: center;

        .profile-image {
            border-radius: 50%;
            border: 1px solid black;

            padding: 16px;

            width: 150px;
        }

        .social {
            padding: 24px 0;

            a {
                margin: 0 8px;
                
                &:hover {
                    cursor: pointer;
                    
                    .icon {
                        transform: scale(1.5);
                    }
                }
                
                .icon {
                    transition: transform 0.2s ease-in-out;
                    width: 24px;
                }
            }
        }

        .menu {
            a {
                text-decoration: none;
                padding-right: 8px;
                border-right: 1px solid rgba(0, 0, 0, 0.2);

                &:first-of-type {
                    border-color: black;
                }

                &:last-of-type {
                    border: none;
                }

                &.all {
                    color: $accent-color;
                }
            }
        }
    }

    .content-wrapper {
        width: 65%;
        height: 80vh;
        display: flex;
        // justify-content: center;
        align-items: center;

        overflow-y: auto;

        padding: 56px;

        .content {
            height: 100%;
            display: flex;
            flex-direction: column;
            justify-content: center;
        }

        a {
            color: purple;
            &::before, &::after {
                content: ':';
            }
        }
    }
}

footer {
    position: relative;
    color: white;
    text-align: center;
    background-color: black; /* Background color for the entire footer */
    padding-top: 20px; /* Adjust padding as needed */
}

.squiggly-line {
    position: absolute;
    top: -20px; /* Adjust to bring the squiggly line into view */
    width: 100%;
    height: 40px; /* Height to fit the squiggly line */
    overflow: hidden;
}

.squiggly-line svg {
    display: block;
    width: 100%;
    height: 100%;
}

.footer-content {
    padding: 20px 0; /* Adjust padding as needed */
}




a {
    text-decoration: none;
    color: inherit;
}

code {
    span {
        font-size: 14px;
        font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
    }
}

::-webkit-scrollbar {
    display: none;
}

@media screen and (max-width: 780px) {
    .main {
        flex-direction: column;
        padding-top: 16px;

        .sidebar {
            width: 100%;
            border-right: none;
        }

        .content-wrapper {
            justify-content: center;
        }
    }
}

